...
        floatingActionButton: GestureDetector(
          onTap: () => Navigator.of(context).pushNamed(
            NewToDo.routeName,
          ),
          child: MyFAB(
            Icons.add,
            key: Key('AddFAB'),
          ),
        ),
      ),
    );
  }
}
...
